--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ dotenv = "0.8"
 lazy_static = "0.2"
 r2d2 = "0.7"
 r2d2-diesel = "0.9"
-rocket = "0.1"
+rocket = { version = "0.1", features = ["testing"] }
 rocket_codegen = "0.1"
 rocket_contrib = "0.1"
 serde = "0.8"
