--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -1,23 +1,28 @@
 [package]
+authors = ["Zachary Golba <zachary.golba@postlight.com>"]
 name = "blog-api"
 version = "0.1.0"
-authors = ["Zachary Golba <zachary.golba@postlight.com>"]
 
 [dependencies]
-chrono = { version = "0.4.0", features = ["serde"] }
-blog-db = { path = "../db" }
+diesel = "0.14.0"
+dotenv = "0.10.1"
+jsonapi = "0.5.2"
+lazy_static = "0.2.8"
+rayon = "0.8.2"
+regex = "0.2.2"
+rocket = "0.3.0"
+rocket_codegen = "0.3.0"
+rocket_contrib = "0.3.0"
 serde = "1.0.9"
 serde_derive = "1.0.9"
 serde_json = "1.0.2"
 
-[dependencies.rocket]
-branch = "master"
-git = "https://github.com/SergioBenitez/Rocket"
+[dependencies.blog-db]
+path = "../db"
 
-[dependencies.rocket_codegen]
-branch = "master"
-git = "https://github.com/SergioBenitez/Rocket"
+[dependencies.blog-fmt]
+path = "../fmt"
 
-[dependencies.rocket_contrib]
-branch = "master"
-git = "https://github.com/SergioBenitez/Rocket"
+[dependencies.chrono]
+features = ["serde"]
+version = "0.4.0"
